[Fix] - left padding of see library link reduced to 0 in order to match the alignment with the thank you text.

--- a/inc/assets/css/astra-admin-rtl.css
+++ b/inc/assets/css/astra-admin-rtl.css
@@ -105,3 +105,6 @@
 #astra-sites-on-active .notice-content .notice-heading {
     font-size: 20px;
 }
+#astra-sites-on-active .astra-review-notice-container a {
+    padding-right: 0px;
+}
